[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/menu/shine_select_screen/background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/shared/background/backgrounds/day/day.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu/127BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menu/shine_select_screen/shine_select_screen.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/sm256.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 8
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 11
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 26
outline_color = Color( 0.054902, 0, 0.25098, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_color = Color( 0.054902, 0, 0.25098, 1 )
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )

[node name="ShineSelectScreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 0.947917
anchor_bottom = 0.907407
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineParent" type="Node2D" parent="."]
position = Vector2( 384, 232 )

[node name="Tween" type="Tween" parent="."]

[node name="Labels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTitle" type="Label" parent="Labels"]
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.183
margin_bottom = 66.68
custom_fonts/font = SubResource( 4 )
text = "My Level"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTitleBacking" type="Label" parent="Labels"]
show_behind_parent = true
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.183
margin_bottom = 66.68
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "My Level"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineTitle" type="Label" parent="Labels"]
anchor_left = 0.1
anchor_top = 0.234
anchor_right = 0.9
anchor_bottom = 0.329
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The Rainbow Shine Sprite"
align = 1
clip_text = true

[node name="ShineDescription" type="Label" parent="Labels"]
anchor_left = 0.15
anchor_top = 0.768
anchor_right = 0.85
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This is a description
get stick bugged lol
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonMoveLeft" type="Button" parent="Buttons"]
anchor_top = 4.0
anchor_right = 6.5
anchor_bottom = 7.75
margin_top = -0.279999
margin_right = -0.399994
margin_bottom = -0.200012
theme = SubResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMoveRight" type="Button" parent="Buttons"]
anchor_left = 12.5
anchor_top = 4.0
anchor_right = 19.2
anchor_bottom = 7.75
margin_left = -3.05176e-05
margin_bottom = -3.05176e-05
theme = SubResource( 10 )
flat = true

[node name="ButtonSelectShine" type="Button" parent="Buttons"]
anchor_left = 6.5
anchor_top = 4.0
anchor_right = 12.5
anchor_bottom = 7.75
margin_bottom = -0.200012
theme = SubResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" parent="Buttons" instance=ExtResource( 4 )]
anchor_left = 0.2
anchor_top = 9.775
anchor_right = 0.999
anchor_bottom = 10.574
margin_top = -3.05176e-05
margin_right = 64.04
margin_bottom = 64.04
